fish sprite handling